# flightless

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
Python - discord.py 2019/: bot.py  graphing.py  main.py  requirements.txt  sec.py
Rust - Serenity 2019/: Cargo.toml
Rust - Serenity 2019/src/daddies/: mod.rs
bot/: bot.py  main.py
docs/: CNAME  index.html
src/: main.rs
src/daddies/: mathdaddy.rs
