[package]
name = "flightless"
version = "0.1.0"
authors = ["Duncan Fryer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight = { git = "https://github.com/twilight-rs/twilight.git" }
# twilight-model = { default-features = false, git = "https://github.com/twilight-rs/twilight" }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
regex = "1"
lazy_static = "1.4.0"
mongodb = { version = "0.10.0", default-features= false, features = ["sync"] }
bson = "0.14.0"
chrono = "0.4"