[package]
name = "flightless"
version = "0.0.1"
authors = ["Duncan Fryer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = "0.1"
twilight-http = "0.1"
twilight-model = "0.1"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
regex = "1"
lazy_static = "1.4.0"
mongodb = "1.0.0"
chrono = "0.4"