[package]
name = "flightless"
version = "1.0.0"
authors = ["Duncan Fryer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.6.0"
regex    = "1"
lazy_static = "1.3.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'